--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -2136,6 +2136,8 @@ ls.team.coachingskill.short = Trainer
 ls.module.statistics.club.assistant_trainers_level.short = Assistenten
 # General labels =========================================================
 ls.general_label.miscellaneous = Verschiedenes
+ls.general_label.not_available_abbreviation=n.v.
+
 # youth module
 YouthPlayerOverview = Jugendspieler Übersicht
 YouthTrainingView = Jugend Training
@@ -2260,3 +2262,23 @@ ls.player.motherclub.name = Heimatverein
 ls.player.matchescurrentteam = Tore für aktuellen Verein
 ls.about.database.folder = Datenbank-Verzeichnis
 ls.about.logs.folder = Logging-Verzeichnis
+# ArenaInfoPanel
+ArenaInfoPanel.place_type=Platztyp
+ArenaInfoPanel.places=Plätze
+ArenaInfoPanel.rate_in_percent=Anteil in %
+ArenaInfoPanel.last_improvement=Letzter Umbau:
+ArenaInfoPanel.completion=Fertigstellung:
+ArenaInfoPanel.available=Verfügbar:
+ArenaInfoPanel.construction_in_progress=im Umbau
+ArenaInfoPanel.current=Aktuell
+ArenaInfoPanel.expansion=Umbau
+ArenaInfoPanel.change_in_percent=Veränderung in %
+ArenaInfoPanel.future=Zukunft
+ArenaInfoPanel.finished_in_n_days_format=Fertigstellung in %s Tagen.
+ArenaInfoPanel.built=Ausgebaut!
+Duration.days_abbreviation=T
+Duration.hours_abbreviation=S
+Duration.minutes_abbreviation=M
+Duration.seconds_abbreviation=s
+ArenaInfoPanel.sum_sign=∑
+ArenaInfoPanel.total_seats_and_sum_sign=Gesamtgrösse ∑
