--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -298,6 +298,7 @@ ls.player.category.Substitute=Substitute
 ls.player.category.Reserve=Reserve
 ls.player.category.Extra1=Extra1
 ls.player.category.Extra2=Extra2
+ls.player.category.undefined=Undefined
 
 #Team attributes
 ls.team.teamspirit=Team spirit
