--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -298,6 +298,7 @@ ls.player.category.Substitute=Substitute
 ls.player.category.Reserve=Reserve
 ls.player.category.Extra1=Extra1
 ls.player.category.Extra2=Extra2
+ls.player.category.undefined=Undefined
 
 #Team attributes
 ls.team.teamspirit=Team spirit
@@ -1781,19 +1782,6 @@ trainpre.notrain=No training
 trainpre.priority=Training priority
 trainpre.individual.prios=Individual priorities
 trainpre.plan=Training plan
-
-#Feedback Plugin
-feedbackplugin.dataTooOldWarning=Your data are too old (last updated on %1$s), please start by downloading new data from Hattrick
-
-feedbackplugin.success=The data has been successfully sent. Thank for your contribute.
-feedbackplugin.serverError=The data has not been successfully sent, server error. You can report this error by opening a new bug ticket on GitHub.
-feedbackplugin.inputError=The data has not correct, and didn't sent to server. You can report this error by opening a new bug ticket on GitHub.
-feedbackplugin.fetcRequiredLineupError=The required lineup could not be downloaded: please check your internet connection. If the problem persists, you can report this error by opening a new bug ticket on GitHub.
-feedbackplugin.jbSendActivated=Send information to the server.
-feedbackplugin.jbSendDeactivated=The lineup in HO does not match the requirements
-feedbackplugin.notMatchRequirements=<p>Please check:</br><li>same lineup both in HO and in HT as required</li><li>same tactics both in HO and in HT as required</li><li>same attitude both in HO and in HT as required</li><li>same style of play both in HO and in HT</li></p>
-feedbackplugin.serverOffline=<p>The server is temporarily offline for maintenance activities. Please, you can send feedback later.</p>
-feedbackplugin.ParseHTRatingError=HT prediction ratings could not be parsed. Are you using HO either in English or in the same language as HT interface? If it is the case then please report the bug on GitHub.
 
 options.Alternative_Position_Tolerance=Positions Tolerance
 options.tt_Alternative_Position_Tolerance=Set the tolerance level to highlight the player's alternative positions (recommended is 3 and it is advised to keep a value between 2 and 4)
