#2117 Youth player overview show Rate my academy scores

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -300,6 +300,9 @@ ls.player.category.Extra1=Extra1
 ls.player.category.Extra2=Extra2
 ls.player.category.undefined=Undefined
 
+ls.player.ratemyacademyscore=RMA
+ls.player.ratemyacademyscore.tooltip=Rate my academy score
+
 #Team attributes
 ls.team.teamspirit=Team spirit
 ls.team.confidence=Confidence
