#163 new check box to use average rating instead of first minute rating

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -718,6 +718,7 @@ MF-ST-AW=MID-FOR-DE
 #Assistent-Logik
 ST-AW-MF=FOR-DE-MID
 #Assistent-Logik
+use_average_rating=Use average rating
 Idealposition_zuerst=best position first
 #Assistent-Logik
 Form_beruecksichtigen=consider form
@@ -1002,6 +1003,7 @@ tt_AufstellungsAssistent_Not=not this selected group
 tt_AufstellungsAssistent_Gruppe=group of players that should be used for the line-up
 tt_AufstellungsAssistent_Reihenfolge=Line-up assistant should consider the sectors in the following order of importance
 tt_AufstellungsAssistent_Idealposition=best position of the player will be preferred
+tt_use_average_rating=Use players' average rating or rating at first minute
 tt_AufstellungsAssistent_Form=consider player form (recommended)
 tt_AufstellungsAssistent_Verletzte=line-up injured player
 tt_AufstellungsAssistent_Gesperrte=line-up suspended players
