#2229 Add column trainer notes to player overview table

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -315,6 +315,8 @@ ls.player.cost-to-convert-trainer-passable.tooltip=Costs to convert player to pa
 ls.player.cost-to-convert-trainer-inadequate.tooltip=Costs to convert player to inadequate trainer
 ls.player.cost-to-convert-trainer-weak.tooltip=Costs to convert player to weak trainer
 
+ls.player.training.notes=Training notes
+
 #Team attributes
 ls.team.teamspirit=Team spirit
 ls.team.confidence=Confidence
