#2233 Fix nt team hrf file import

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -688,6 +688,7 @@ match.setpiecestaker=Set pieces taker
 Fehler=Error
 #Meldung
 Importfehler=File is corrupt
+hrf.import.error.teamid_conflict=Hrf file from other team can not be imported
 #Meldung
 DateiNichtGefunden=File not found
 #Meldung
