#1064 Debug ForecastCurve.readFutureMatches

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -463,6 +463,7 @@ ls.match.gd=±
 ls.match.matchtype.league=League match
 ls.match.matchtype.qualification=Qualification match
 ls.match.matchtype.cup=Cup match
+ls.match.matchtype.cup.potential=Potential cup match
 ls.match.matchtype.friendly_normal=Friendly (normal rules)
 ls.match.matchtype.friendly_cup=Friendly (cup rules)
 ls.match.matchtype.internationalcompetition_normal=International competition match (normal rules)
