--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2462,3 +2462,5 @@ Duration.minutes_abbreviation=m
 Duration.seconds_abbreviation=s
 ArenaInfoPanel.sum_sign=∑
 ArenaInfoPanel.total_seats_and_sum_sign=Total Seats ∑
+# Teamspirit forecast module
+teamspirit.forecast.reset=Reset
