#1064 Team spirit boost in forecast module (#2241)
* #1064 refactor ForecastCurve.readFutureMatches

* #1064 Debug ForecastCurve.readFutureMatches

* #1064 Review ForecastCurve.readFutureMatches

* #1064 Nt team spirit reset value is 5.0

* #1064 Nt team spirit reset value is 5.0

* #1064 TODO training intensity planning

* #1064 TODO training intensity planning

* #2237 Fix typo in release_notes.md

* #1064 download and store daily update timestamps

* #1064 training intensity events

* #1064 training intensity events review

* #1064 Fix LoepiCurve.forecastUpdate

* #1064 FutureMatchBox.java renamed to TeamAttitudeEditor

* #1064 FutureMatchBox.java renamed to TeamAttitudeEditor

* #1064 Fix xtra table daily updates

* #1064 Fix xtra table daily updates review

* #1064 Fix forecast calculation

* #1064 Draw match type icons

* #1064 Add some comments

* #1064 Typo in release_notes.md

* #1064 Tychobrailleur's review

* #1064 Acknowledge HT-Tasos

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -463,6 +463,7 @@ ls.match.gd=±
 ls.match.matchtype.league=League match
 ls.match.matchtype.qualification=Qualification match
 ls.match.matchtype.cup=Cup match
+ls.match.matchtype.cup.potential=Potential cup match
 ls.match.matchtype.friendly_normal=Friendly (normal rules)
 ls.match.matchtype.friendly_cup=Friendly (cup rules)
 ls.match.matchtype.internationalcompetition_normal=International competition match (normal rules)
@@ -2462,3 +2463,5 @@ Duration.minutes_abbreviation=m
 Duration.seconds_abbreviation=s
 ArenaInfoPanel.sum_sign=∑
 ArenaInfoPanel.total_seats_and_sum_sign=Total Seats ∑
+# Teamspirit forecast module
+teamspirit.forecast.reset=Reset
