tooltip in subskill editor

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -108,6 +108,7 @@ ls.player.loyalty=Loyalty
 ls.player.motherclub=Mother club
 ls.player.motherclub.bonus=Mother club bonus
 ls.player.tsi=TSI
+ls.player.tsi.calculatedversusindicated=Calculated versus indicated TSI
 ls.player.wage=Wage
 ls.player.warningstatus=Warning status
 ls.player.injurystatus=Injury status
