#2319 Fix GeneralSettingsPanel layout

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2151,8 +2151,7 @@ MatchEvent_815=Team overperforming compared to last league match (HT Rating)
 MatchEvent_816=Possession shift because of team confusion
 MatchEvent_817=Possession shift because of team nerves
 
-
-# Promotion / Demotion status
+# Promotion / Demotion status (currently not used anymore - TODO: Decide whether this should be removed or reactivated
 pd_status.NO_CHANGE=No change expected.  You are remaining in the same series.
 pd_status.DIRECT_DEMOTION=You will be demoted to {0}.  Tough luck...
 pd_status.DEMOTION_MATCH_BARRAGE=You will play a playoff to remain in your series against {1} ({2}) from series {0}.
@@ -2165,8 +2164,6 @@ pd_status.download.warning.title=League Data Download
 pd_status.download.unavailable.data=Promotion League Data not available.  Click button to process for your league.
 pd_status.download.unavailable.loading=Promotion League Data not available.  Currently processing, please wait...
 pd_status.download.pending=Calculation is running for league {0}, your promotion status will be available shortly.
-
-PMStatusTest=Promotion Status Test
 
 # youth module
 YouthPlayerOverview=Youth player overview
