#2283 Add missing language properties

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -52,6 +52,10 @@ ls.module.training.training_prediction=Training prediction
 ls.module.training.training_development=Training development of
 ls.module.training.edit_all_future_trainings.tt=Edit all future trainings
 ls.module.training.edit_selected_future_trainings.tt=Edit selected future trainings
+ls.module.training.overview=Training overview
+ls.module.training.skillUps=Training skillups
+ls.module.training.settings.past=Past training settings
+ls.module.training.settings.future=Future training settings
 
 # Module Matches =======================================================
 ls.module.matches.ratingRatio=Rating ratio: %s vs %s
@@ -1268,6 +1272,7 @@ teamSelect.doChooseHeader=Choose team
 lineup.teamspiritsub=Sub of team spirit
 matches.tabtitle.ratings=Ratings
 options.misc.skin=Skin
+options.misc.currency=Currenncy
 windowtitle.xml-export=XML-Export
 windowtitle.exportsuccessful=Export successful
 xmlexport.information={0} matches exported.\n\nRegarding to CHPP-rules:\nAny application that uses this XML-file has to be CHPP approved!
@@ -2437,6 +2442,9 @@ ls.color.border_rating_bar=Team rating border
 ls.color.player_details_bar_border_color=Player details bar border
 ls.color.player_details_bar_fill_green=Player bar fill green
 ls.color.player_details_stars_fill=Player details stars
+ls.color.youth_above_average_rating=Youth above average rating
+ls.color.youth_high_rating=Youth high rating
+ls.color.youth_highest_rating=Youth highest rating
 colors=Colors
 
 ls.options.changed.save.question=Options were changed. Do you want to save them?
