#2283 Add trainings effect columns to editing in options dialog

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -56,6 +56,7 @@ ls.module.training.overview=Training overview
 ls.module.training.skillUps=Training skillups
 ls.module.training.settings.past=Past training settings
 ls.module.training.settings.future=Future training settings
+ls.module.training.effect=Training effect
 
 # Module Matches =======================================================
 ls.module.matches.ratingRatio=Rating ratio: %s vs %s
