#2283 Fix translation of english training types

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -418,14 +418,14 @@ ls.team.teamattitude_short.matchoftheseason=MOTS
 ls.team.trainingtype.setpieces=Set pieces
 ls.team.trainingtype.defending=Defending
 ls.team.trainingtype.scoring=Scoring
-ls.team.trainingtype.crossing=Crossing (Winger)
-ls.team.trainingtype.shooting=Shooting
-ls.team.trainingtype.shortpasses=Short passes
+ls.team.trainingtype.crossing=Winger
+ls.team.trainingtype.shooting=Scoring and Set Pieces
+ls.team.trainingtype.shortpasses=Passing
 ls.team.trainingtype.playmaking=Playmaking
-ls.team.trainingtype.goalkeeping=Goalkeeping
-ls.team.trainingtype.throughpasses=Through passes
-ls.team.trainingtype.defensivepositions=Defensive positions
-ls.team.trainingtype.wingattacks=Wing attacks
+ls.team.trainingtype.goalkeeping=Keeper
+ls.team.trainingtype.throughpasses=Passing (Defenders + Midfielders + Wingers)
+ls.team.trainingtype.defensivepositions=Defending (Defenders, Keepers + All Midfielders)
+ls.team.trainingtype.wingattacks=Winger (Wingers + Attackers)
 
 #Values for Coach type
 ls.team.coachtype.defensive=defence-minded
