Add exit confirmation dialog and improve UTF-8 support for Greek translations

--- a/src/main/resources/language/Catalan.properties
+++ b/src/main/resources/language/Catalan.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Base de dades
 ls.menu.file.database.dbuseradministration = Base de dades/Administració d'usuaris
 ls.menu.file.database.databasecleanup = Neteja la base de dades
 ls.menu.file.fullscreen = Pantalla sencera
+confirm.exit.title = Confirma la sortida
+confirm.exit.message = Realment vols sortir de Hattrick Organizer?
 ls.menu.file.quit = Surt
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Pàgina del HO\!
