--- a/src/main/resources/language/Czech.properties
+++ b/src/main/resources/language/Czech.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Databáze
 ls.menu.file.database.dbuseradministration = Databáze/Správa uživatelů
 ls.menu.file.database.databasecleanup = Pročistit databázi
 ls.menu.file.fullscreen = Celá obrazovka
+confirm.exit.title = Potvrdit ukončení
+confirm.exit.message = Opravdu chcete ukončit Hattrick Organizer?
 ls.menu.file.quit = Ukončit
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! stránky
