--- a/src/main/resources/language/Danish.properties
+++ b/src/main/resources/language/Danish.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Database
 ls.menu.file.database.dbuseradministration = Database / Bruger administration
 ls.menu.file.database.databasecleanup = Rens database
 ls.menu.file.fullscreen = Fuldskærm
+confirm.exit.title = Bekræft afslutning
+confirm.exit.message = Vil du virkelig afslutte Hattrick Organizer?
 ls.menu.file.quit = Afslut
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Hjemmeside
