--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -570,6 +570,8 @@ ls.menu.file.database=Database
 ls.menu.file.database.dbuseradministration=User administration
 ls.menu.file.database.databasecleanup=Database cleanup
 ls.menu.file.fullscreen=Full screen
+confirm.exit.title=Confirm Exit
+confirm.exit.message=Do you really want to quit Hattrick Organizer?
 ls.menu.file.quit=Quit
 
 #Top menu: Help->Project homepage
