--- a/src/main/resources/language/Finnish.properties
+++ b/src/main/resources/language/Finnish.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Tietokanta
 ls.menu.file.database.dbuseradministration = Tietokanta/Käyttäjänhallinta
 ls.menu.file.database.databasecleanup = Puhdista tietokanta
 ls.menu.file.fullscreen = Koko näyttö
+confirm.exit.title = Vahvista poistuminen
+confirm.exit.message = Haluatko varmasti sulkea Hattrick Organizerin?
 ls.menu.file.quit = Poistu
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Kotisivu
