--- a/src/main/resources/language/French.properties
+++ b/src/main/resources/language/French.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Base de données
 ls.menu.file.database.dbuseradministration = Gestion db/utilisateur
 ls.menu.file.database.databasecleanup = Nettoyage base de données
 ls.menu.file.fullscreen = Plein écran
+confirm.exit.title = Confirmer la fermeture
+confirm.exit.message = Voulez-vous vraiment quitter Hattrick Organizer ?
 ls.menu.file.quit = Quitter
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Site Hattrick Organizer\!
