--- a/src/main/resources/language/Galego.properties
+++ b/src/main/resources/language/Galego.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Base de datos
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Limpar a base de datos
 ls.menu.file.fullscreen = Pantalla completa
+confirm.exit.title = Confirmar saída
+confirm.exit.message = Realmente queres saír de Hattrick Organizer?
 ls.menu.file.quit = Saír
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Páxina web do HO\!
