--- a/src/main/resources/language/Georgian.properties
+++ b/src/main/resources/language/Georgian.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = მონაცემთა ბაზა
 ls.menu.file.database.dbuseradministration = მონაცემთა ბაზა/მომხარებლის ადმინისტრირება
 ls.menu.file.database.databasecleanup = ს მონაცემთა ბაზის გასუფთავება
 ls.menu.file.fullscreen = მთლიანი ეკრანი
+confirm.exit.title = გამოსვლის დადასტურება
+confirm.exit.message = მართლა გსურთ Hattrick Organizer-ის დატოვება?
 ls.menu.file.quit = გასვლა
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\!–ს გვერდი
