--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Datenbank
 ls.menu.file.database.dbuseradministration = Datenbank-/Benutzerverwaltung
 ls.menu.file.database.databasecleanup = Datenbankbereinigung
 ls.menu.file.fullscreen = Vollbild
+confirm.exit.title = Beenden bestätigen
+confirm.exit.message = Möchten Sie Hattrick Organizer wirklich beenden?
 ls.menu.file.quit = Beenden
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
