--- a/src/main/resources/language/Greek.properties
+++ b/src/main/resources/language/Greek.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Vasi Dedomenwn
 ls.menu.file.database.dbuseradministration = Vasi Dedomenwn/Diaxeirish
 ls.menu.file.database.databasecleanup = Katharismos tis vasis dedomenwn
 ls.menu.file.fullscreen = Pliris othoni
+confirm.exit.title = Επιβεβαίωση Εξόδου
+confirm.exit.message = Είστε σίγουρος ότι θέλετε να κλείσετε το Hattrick Organizer;
 ls.menu.file.quit = Eksodos
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
