--- a/src/main/resources/language/Hangul(Korean).properties
+++ b/src/main/resources/language/Hangul(Korean).properties
@@ -333,6 +333,8 @@ ls.menu.file.database = 데이터베이스
 ls.menu.file.database.dbuseradministration = 데이터베이스/사용자 관리
 ls.menu.file.database.databasecleanup = 데이터베이스 정리
 ls.menu.file.fullscreen = 전체 화면
+confirm.exit.title = 종료 확인
+confirm.exit.message = 정말로 Hattrick Organizer를 종료하시겠습니까?
 ls.menu.file.quit = 종료
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! 홈페이지
