--- a/src/main/resources/language/Hebrew.properties
+++ b/src/main/resources/language/Hebrew.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = בסיס נתונים
 ls.menu.file.database.dbuseradministration = ניהול משתמשים/בסיס נתונים
 ls.menu.file.database.databasecleanup = ניקוי בסיס הנתונים של האורגנייזר
 ls.menu.file.fullscreen = מסך מלא
+confirm.exit.title = אישור יציאה
+confirm.exit.message = האם אתה באמת רוצה לצאת מ-Hattrick Organizer?
 ls.menu.file.quit = יציאה
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! דף בית
