--- a/src/main/resources/language/Hrvatski(Croatian).properties
+++ b/src/main/resources/language/Hrvatski(Croatian).properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Baza podataka
 ls.menu.file.database.dbuseradministration = Baza podataka/Upravljanje korisnicima
 ls.menu.file.database.databasecleanup = Očisti bazu
 ls.menu.file.fullscreen = Puni zaslon
+confirm.exit.title = Potvrdi izlaz
+confirm.exit.message = Želite li stvarno izaći iz Hattrick Organizer-a?
 ls.menu.file.quit = Izlaz
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
