--- a/src/main/resources/language/Indonesian.properties
+++ b/src/main/resources/language/Indonesian.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Database
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Bersihkan Database
 ls.menu.file.fullscreen = Layar Penuh
+confirm.exit.title = Konfirmasi Keluar
+confirm.exit.message = Apakah Anda yakin ingin keluar dari Hattrick Organizer?
 ls.menu.file.quit = Keluar
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Homepage HO\!
