--- a/src/main/resources/language/Italiano.properties
+++ b/src/main/resources/language/Italiano.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Database
 ls.menu.file.database.dbuseradministration = Database/Utente amministratore
 ls.menu.file.database.databasecleanup = Pulisci il Database
 ls.menu.file.fullscreen = Schermo intero
+confirm.exit.title = Conferma uscita
+confirm.exit.message = Vuoi davvero uscire da Hattrick Organizer?
 ls.menu.file.quit = Uscita
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
