--- a/src/main/resources/language/Latvija.properties
+++ b/src/main/resources/language/Latvija.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Datu bāze
 ls.menu.file.database.dbuseradministration = Datubāzes/Lietotāju admnistrēšana
 ls.menu.file.database.databasecleanup = Datu bāzes iztīrīšana
 ls.menu.file.fullscreen = Pilnekrāna režīms
+confirm.exit.title = Apstiprināt iziešanu
+confirm.exit.message = Vai tiešām vēlaties aizvērt Hattrick Organizer?
 ls.menu.file.quit = Beigt
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Majas lapa
