--- a/src/main/resources/language/Lithuanian.properties
+++ b/src/main/resources/language/Lithuanian.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Duomenų bazė
 ls.menu.file.database.dbuseradministration = Duombazės ir vartotojų nustatymai
 ls.menu.file.database.databasecleanup = Išvalyti duomenų bazę
 ls.menu.file.fullscreen = Rodyti per visą ekraną
+confirm.exit.title = Patvirtinti išėjimą
+confirm.exit.message = Ar tikrai norite išeiti iš Hattrick Organizer?
 ls.menu.file.quit = Išeiti
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! tinklalapis
