--- a/src/main/resources/language/Magyar.properties
+++ b/src/main/resources/language/Magyar.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Adatbázis
 ls.menu.file.database.dbuseradministration = Adatbázis/Felhasználó adminisztráció
 ls.menu.file.database.databasecleanup = Adatbázis tisztítás
 ls.menu.file.fullscreen = Teljes képernyő
+confirm.exit.title = Kilépés megerősítése
+confirm.exit.message = Biztosan ki akar lépni a Hattrick Organizerből?
 ls.menu.file.quit = Kilépés
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Honlap
