--- a/src/main/resources/language/Nederlands.properties
+++ b/src/main/resources/language/Nederlands.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Database
 ls.menu.file.database.dbuseradministration = Database/gebruiker beheer
 ls.menu.file.database.databasecleanup = Database opschonen
 ls.menu.file.fullscreen = Volledig scherm
+confirm.exit.title = Bevestig afsluiten
+confirm.exit.message = Weet je zeker dat je Hattrick Organizer wilt afsluiten?
 ls.menu.file.quit = Beëindigen
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
