--- a/src/main/resources/language/Norsk.properties
+++ b/src/main/resources/language/Norsk.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Database
 ls.menu.file.database.dbuseradministration = Administrer database
 ls.menu.file.database.databasecleanup = Rydd opp i databasen
 ls.menu.file.fullscreen = Full skjerm
+confirm.exit.title = Bekreft avslutning
+confirm.exit.message = Vil du virkelig avslutte Hattrick Organizer?
 ls.menu.file.quit = Avslutt
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Hjemmeside
