--- a/src/main/resources/language/Persian.properties
+++ b/src/main/resources/language/Persian.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = پایگاه داده
 ls.menu.file.database.dbuseradministration = بانک اطلاعاتی/ مدیریت کاربر
 ls.menu.file.database.databasecleanup = پاکسازی پایگاه داده برنامه
 ls.menu.file.fullscreen = کل صفحه
+confirm.exit.title =  تأیید خروج
+confirm.exit.message = آیا مطمئن هستید که می‌خواهید از Hattrick Organizer خارج شوید؟
 ls.menu.file.quit = خروج
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = صفحه خانگی برنامه
