--- a/src/main/resources/language/Polish.properties
+++ b/src/main/resources/language/Polish.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Baza danych
 ls.menu.file.database.dbuseradministration = Zarządzanie bazą/użytkownikami
 ls.menu.file.database.databasecleanup = Czyszczenie bazy
 ls.menu.file.fullscreen = Pełny ekran
+confirm.exit.title = Potwierdź zakończenie
+confirm.exit.message =  Czy na pewno chcesz zamknąć Hattrick Organizer?
 ls.menu.file.quit = Wyjście
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Strona HO\!
