--- a/src/main/resources/language/Portugues.properties
+++ b/src/main/resources/language/Portugues.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Base de Dados
 ls.menu.file.database.dbuseradministration = Base de Dados / Configuraçãoo de Utilizadores
 ls.menu.file.database.databasecleanup = Limpar a Base de Dados
 ls.menu.file.fullscreen = Ecrã Inteiro
+confirm.exit.title = Confirmar saída
+confirm.exit.message = Tem a certeza de que quer sair do Hattrick Organizer?
 ls.menu.file.quit = Sair
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Página de HO\!
