--- a/src/main/resources/language/PortuguesBrasil.properties
+++ b/src/main/resources/language/PortuguesBrasil.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Banco de Dados
 ls.menu.file.database.dbuseradministration = Administração Banco de Dados/Usuários
 ls.menu.file.database.databasecleanup = Limpeza Banco de Dados
 ls.menu.file.fullscreen = Tela cheia
+confirm.exit.title = Confirmar saída
+confirm.exit.message = Você realmente deseja sair do Hattrick Organizer?
 ls.menu.file.quit = Sair
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Página de HO\!
