--- a/src/main/resources/language/Romanian.properties
+++ b/src/main/resources/language/Romanian.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Baza de date
 ls.menu.file.database.dbuseradministration = Baza de date/Administrare utilizator
 ls.menu.file.database.databasecleanup = Curăţă baza de date
 ls.menu.file.fullscreen = Pe întregul ecran
+confirm.exit.title = Confirmă ieșirea
+confirm.exit.message = Sigur vrei să închizi Hattrick Organizer?
 ls.menu.file.quit = Ieşire
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
