--- a/src/main/resources/language/Russian.properties
+++ b/src/main/resources/language/Russian.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = База данных
 ls.menu.file.database.dbuseradministration = Настройка БД
 ls.menu.file.database.databasecleanup = Очистка данных
 ls.menu.file.fullscreen = На весь экран
+confirm.exit.title = Подтвердите выход
+confirm.exit.message = Вы действительно хотите выйти из Hattrick Organizer?
 ls.menu.file.quit = Выход
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Домашняя страница HO\!
