--- a/src/main/resources/language/Serbian(Cyrillic).properties
+++ b/src/main/resources/language/Serbian(Cyrillic).properties
@@ -333,6 +333,8 @@ ls.menu.file.database = База података
 ls.menu.file.database.dbuseradministration = База података / Корисничка администрација
 ls.menu.file.database.databasecleanup = Чишћење базе
 ls.menu.file.fullscreen = Цео екран
+confirm.exit.title = Потврди излазак
+confirm.exit.message = Да ли заиста желите да изађете из Hattrick Organizer-а?
 ls.menu.file.quit = Излаз
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = XO\! Почетна страна
