--- a/src/main/resources/language/Slovak.properties
+++ b/src/main/resources/language/Slovak.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = Databaza
 ls.menu.file.database.dbuseradministration = Databaza/Administracia uzivatela
 ls.menu.file.database.databasecleanup = Vycisti Databaza
 ls.menu.file.fullscreen = Cela obrazovka
+confirm.exit.title = Potvrďte ukončenie
+confirm.exit.message = Naozaj chcete ukončiť Hattrick Organizer?
 ls.menu.file.quit = Koniec
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Domovska stranka HO\!
