--- a/src/main/resources/language/Spanish(AR).properties
+++ b/src/main/resources/language/Spanish(AR).properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Base de datos
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Limpiar la BD
 ls.menu.file.fullscreen = Pantalla Completa
+confirm.exit.title = Confirmar salida
+confirm.exit.message = ¿De verdad querés salir de Hattrick Organizer?
 ls.menu.file.quit = Salir
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Página de HO\!
