--- a/src/main/resources/language/Svenska.properties
+++ b/src/main/resources/language/Svenska.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Databas
 ls.menu.file.database.dbuseradministration = Databas / Användarkonfiguration
 ls.menu.file.database.databasecleanup = Rensa databas
 ls.menu.file.fullscreen = Helskärm
+confirm.exit.title = Bekräfta avslut
+confirm.exit.message = Vill du verkligen avsluta Hattrick Organizer?
 ls.menu.file.quit = Avsluta
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Webbplats
