--- a/src/main/resources/language/Turkish.properties
+++ b/src/main/resources/language/Turkish.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Veritabani
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Database`i Temizle
 ls.menu.file.fullscreen = Tam ekran
+confirm.exit.title = Çıkışı Onayla
+confirm.exit.message = Hattrick Organizer'dan çıkmak istediğinizden emin misiniz?
 ls.menu.file.quit = Cikis
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Anasayfasi
