--- a/src/main/resources/language/Vlaams.properties
+++ b/src/main/resources/language/Vlaams.properties
@@ -331,6 +331,8 @@ ls.menu.file.database = Databank
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Opkuisen Databank
 ls.menu.file.fullscreen = Volledig scherm
+confirm.exit.title = Bevestig afsluiten
+confirm.exit.message = Ben je zeker dat je Hattrick Organizer wilt afsluiten?
 ls.menu.file.quit = Beëindigen
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Homepage
