--- a/src/main/resources/language/Bulgarian.properties
+++ b/src/main/resources/language/Bulgarian.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = База данни
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Почистване на HO\! база данни
 ls.menu.file.fullscreen = Цял екран
+confirm.exit.title = Потвърждение за изход
+confirm.exit.message = Наистина ли искате да излезете от Hattrick Organizer?
 ls.menu.file.quit = ИЗХОД
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! Уеб-сайт
