--- a/src/main/resources/language/Chinese.properties
+++ b/src/main/resources/language/Chinese.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = 资料库
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = 清理数据库
 ls.menu.file.fullscreen = 全屏
+confirm.exit.title = 确认退出
+confirm.exit.message = 您确定要退出 Hattrick Organizer 吗？
 ls.menu.file.quit = 退出
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\!主页
