--- a/src/main/resources/language/Japanese.properties
+++ b/src/main/resources/language/Japanese.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = データベース
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = データベースを整理
 ls.menu.file.fullscreen = 全画面表示
+confirm.exit.title = 終了の確認
+confirm.exit.message = 本当に Hattrick Organizer を終了しますか？
 ls.menu.file.quit = 終了
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! ホームページ
