--- a/src/main/resources/language/Slovenian.properties
+++ b/src/main/resources/language/Slovenian.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Ime baze podatkov
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Čiščenje podatkovne baze
 ls.menu.file.fullscreen = Full screen
+confirm.exit.title = Potrdi izhod
+confirm.exit.message = Ali res želite zapreti Hattrick Organizer?
 ls.menu.file.quit = Izhod
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = HO\! spletna stran
