--- a/src/main/resources/language/Spanish.properties
+++ b/src/main/resources/language/Spanish.properties
@@ -333,6 +333,8 @@ ls.menu.file.database = Base de datos
 ls.menu.file.database.dbuseradministration = Administración de BD
 ls.menu.file.database.databasecleanup = Limpiar la BD
 ls.menu.file.fullscreen = Pantalla Completa
+confirm.exit.title = Confirmar salida
+confirm.exit.message = ¿Realmente quieres salir de Hattrick Organizer?
 ls.menu.file.quit = Salir
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Página de HO\!
