--- a/src/main/resources/language/Ukranian.properties
+++ b/src/main/resources/language/Ukranian.properties
@@ -334,6 +334,8 @@ ls.menu.file.database = база даних
 ls.menu.file.database.dbuseradministration = Database/User administration
 ls.menu.file.database.databasecleanup = Чистити базу даних HO
 ls.menu.file.fullscreen = На весь екран
+confirm.exit.title = Підтвердити вихід
+confirm.exit.message = Ви дійсно хочете вийти з Hattrick Organizer?
 ls.menu.file.quit = Вихід
 # Items in the About HO!-Menu
 ls.menu.aboutho.homepage = Домашня сторінка HO\!
