Added a checkbox in the exit confirmation dialog to allow users to skip future prompts and a corresponding option in the Preferences dialog to enable/disable this behavior.

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -572,6 +572,7 @@ ls.menu.file.database.databasecleanup=Database cleanup
 ls.menu.file.fullscreen=Full screen
 confirm.exit.title=Confirm Exit
 confirm.exit.message=Do you really want to quit Hattrick Organizer?
+ls.menu.file.quit.neveraskagain=Don't ask again
 ls.menu.file.quit=Quit
 
 #Top menu: Help->Project homepage
