--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -567,6 +567,7 @@ ls.menu.file.subskillrecalculation=Subskill recalculation
 ls.menu.file.subskillrecalculation7weeks=Subskill recalculation (7 weeks)
 ls.menu.file.preferences=Preferences
 ls.menu.file.database=Database
+options.misc.currency= Currency
 ls.menu.file.database.dbuseradministration=User administration
 ls.menu.file.database.databasecleanup=Database cleanup
 ls.menu.file.fullscreen=Full screen
