--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2472,3 +2472,6 @@ ArenaInfoPanel.sum_sign=∑
 ArenaInfoPanel.total_seats_and_sum_sign=Total Seats ∑
 # Teamspirit forecast module
 teamspirit.forecast.reset=Reset
+
+# Hall of Fame module
+ls.HallOfFame=Hall Of Fame
