Add exit confirmation dialog and improve UTF-8 support for Greek tran… (#2349)
* Add exit confirmation dialog and improve UTF-8 support for Greek translations

* Added a checkbox in the exit confirmation dialog to allow users to skip future prompts and a corresponding option in the Preferences dialog to enable/disable this behavior.

* fix confirmOnExit and added Currency label

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -572,9 +572,13 @@ ls.menu.file.subskillrecalculation=Subskill recalculation
 ls.menu.file.subskillrecalculation7weeks=Subskill recalculation (7 weeks)
 ls.menu.file.preferences=Preferences
 ls.menu.file.database=Database
+options.misc.currency= Currency
 ls.menu.file.database.dbuseradministration=User administration
 ls.menu.file.database.databasecleanup=Database cleanup
 ls.menu.file.fullscreen=Full screen
+confirm.exit.title=Confirm Exit
+confirm.exit.message=Do you really want to quit Hattrick Organizer?
+ls.menu.file.quit.neveraskagain=Don't ask again
 ls.menu.file.quit=Quit
 
 #Top menu: Help->Project homepage
