--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2273,6 +2273,7 @@ ls.update_status.create_staff=Create staff ...
 ls.update_status.fixtures=Downloading fixtures ...
 ls.update_status.calc_subskills=Calculate subskills ...
 ls.update_status.complete=Complete
+ls.update_status.hall_of_fame=Downloading hall of fame ...
 
 ls.player_details.desc1=A {0} who is {1} and {2}.
 ls.player_details.desc2=Has {0} experience and {1} leadership. Has {2} loyalty.
