--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2472,4 +2472,4 @@ ArenaInfoPanel.total_seats_and_sum_sign=Total Seats ∑
 teamspirit.forecast.reset=Reset
 
 # Hall of Fame module
-ls.HallOfFame=Hall Of Fame
+ls.halloffame=Hall Of Fame
