--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2472,4 +2472,43 @@ ArenaInfoPanel.total_seats_and_sum_sign=Total Seats ∑
 teamspirit.forecast.reset=Reset
 
 # Hall of Fame module
-ls.halloffame=Hall Of Fame
+ls.hof=Hall Of Fame
+ls.hof.arrival=HOF arrival
+ls.hof.experttype=Expert type
+ls.hof.extrainer.from=Trainer from
+ls.hof.extrainer.to=Trainer to
+ls.hof.extrainer.duration=Trainer duration
+ls.hof.experttype.hotdog_vender=Hotdog vendor
+ls.hof.experttype.marketing_director=Marketing director
+ls.hof.experttype.informercial_host=Infomercial host
+ls.hof.experttype.restaurant_owner=Restaurant owner
+ls.hof.experttype.entrepeneur=Entrepeneur
+ls.hof.experttype.player_union_representative=Player union representative
+ls.hof.experttype.public_relations_manager=Public relations manager
+ls.hof.experttype.sales_director=Sales director
+ls.hof.experttype.referee=Referee
+ls.hof.experttype.television_show_host=Television show host
+ls.hof.experttype.agent=Agent
+ls.hof.experttype.actor=Actor,
+ls.hof.experttype.sports_journalist=Sports journalist
+ls.hof.experttype.head_equipment_manager=Head equipment manager
+ls.hof.experttype.secretary=Secretary
+ls.hof.experttype.unemployed=Unemployed
+ls.hof.experttype.medic=Medic
+ls.hof.experttype.formcoach=Form coach
+ls.hof.experttype.assistant_trainer=Assistant trainer
+ls.hof.experttype.spokesperson=Spokes person
+ls.hof.experttype.psychologist=Psychologist
+ls.hof.experttype.financial_director=Financial director
+ls.hof.experttype.youth_trainer=Youth trainer
+ls.hof.experttype.youth_scout=Youth scout
+ls.hof.experttype.tactical_assistant=Tactical assistant
+ls.hof.experttype.sports_director=Sports director
+ls.hof.experttype.goalkeepers_coach=Goalkeeper coach
+ls.hof.experttype.supporter_liaison_officer=Supporter liaison officer
+ls.hof.experttype.chief_financial_officer=Chief financial officer
+ls.hof.experttype.press_manager=Press manager
+ls.hof.experttype.head_coach=Head coach
+
+
+
