--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -2261,7 +2261,7 @@ ls.player.ratingend = Bewertung am Ende des Spiels
 ls.player.lastminutes = Einsatzdauer
 ls.player.lastlineup = Position letzter Einsatz
 ls.player.motherclub.name = Heimatverein
-ls.player.matchescurrentteam = Tore fÃ¼r aktuellen Verein
+ls.player.matchescurrentteam = Spiele für aktuellen Verein
 ls.about.database.folder = Datenbank-Verzeichnis
 ls.about.logs.folder = Logging-Verzeichnis
 # ArenaInfoPanel
