#2296 Hall of fame (#2366)
* Add exit confirmation dialog and improve UTF-8 support for Greek translations

* Added a checkbox in the exit confirmation dialog to allow users to skip future prompts and a corresponding option in the Preferences dialog to enable/disable this behavior.

* readme

* Fix ConfirmOnExit item listener

* #2348 release_notes.md

* #2296 start work

* #2296 update release_notes.md

* #2296 start HallOfFameTableModel

* #2296 wip

* #2296 OnlineWorker.downloadHallOfFame

* #2296 HallOfFamePlayer.ExTrainer

* #2296 HallOfFamePlayer.ExTrainer

* #2296 wip

* #2296 wip

* #2296 wip

* #2296 HOPlot.kt

* #2296

* #2283 Enable cursor in charts

* #2283 Format cursor date time output

* #2283 Country column

* #2296 HallOfFamePlayer

* #2296 HallOfFamePlayer

* #2296 HallOfFameChart

* #2296 Fix HallOfFamePanel.refreshHistory

* #2296 Fix HallOfFamePanel multi select

* #2296 History chart configuration

* #2296 Documentation

* #2296 Documentation

* #2296 install4j version 12

* #2296 install4j version 12 github action

* #2296 Uodate release_notes.md

---------

Co-authored-by: eftihia5 <ioannidouefty@gmail.com>

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -609,20 +609,14 @@ ls.finance.expenses.stadium_maintenance=Stadium maintenance
 ls.finance.expenses.stadium_building=Stadium building
 ls.finance.expenses.interest=Interest
 
-
-
-
 #Statistics module
 ls.chart.second_axis=second axis
 ls.chart.third_axis=third axis
 ls.module.statistics.club=Club
-
-
 ls.module.statistics.club.assistant_trainers_level=Assistant coach level
 
 #used in future training editors
 ls.module.statistics.club.assistant_trainers_level.short=Assistants
-
 ls.module.statistics.club.financial_directors_level=Financial director level
 ls.module.statistics.club.form_coachs_level=Form coach level
 ls.module.statistics.club.doctors_level=Doctor level
@@ -2273,6 +2267,7 @@ ls.update_status.create_staff=Create staff ...
 ls.update_status.fixtures=Downloading fixtures ...
 ls.update_status.calc_subskills=Calculate subskills ...
 ls.update_status.complete=Complete
+ls.update_status.hall_of_fame=Downloading hall of fame ...
 
 ls.player_details.desc1=A {0} who is {1} and {2}.
 ls.player_details.desc2=Has {0} experience and {1} leadership. Has {2} loyalty.
@@ -2475,3 +2470,45 @@ ArenaInfoPanel.sum_sign=∑
 ArenaInfoPanel.total_seats_and_sum_sign=Total Seats ∑
 # Teamspirit forecast module
 teamspirit.forecast.reset=Reset
+
+# Hall of Fame module
+ls.hof=Hall Of Fame
+ls.hof.arrival=HOF arrival
+ls.hof.experttype=Expert type
+ls.hof.extrainer.from=Trainer from
+ls.hof.extrainer.to=Trainer to
+ls.hof.extrainer.duration=Trainer duration
+ls.hof.experttype.hotdog_vender=Hotdog vendor
+ls.hof.experttype.marketing_director=Marketing director
+ls.hof.experttype.informercial_host=Infomercial host
+ls.hof.experttype.restaurant_owner=Restaurant owner
+ls.hof.experttype.entrepeneur=Entrepeneur
+ls.hof.experttype.player_union_representative=Player union representative
+ls.hof.experttype.public_relations_manager=Public relations manager
+ls.hof.experttype.sales_director=Sales director
+ls.hof.experttype.referee=Referee
+ls.hof.experttype.television_show_host=Television show host
+ls.hof.experttype.agent=Agent
+ls.hof.experttype.actor=Actor,
+ls.hof.experttype.sports_journalist=Sports journalist
+ls.hof.experttype.head_equipment_manager=Head equipment manager
+ls.hof.experttype.secretary=Secretary
+ls.hof.experttype.unemployed=Unemployed
+ls.hof.experttype.medic=Medic
+ls.hof.experttype.formcoach=Form coach
+ls.hof.experttype.assistant_trainer=Assistant trainer
+ls.hof.experttype.spokesperson=Spokes person
+ls.hof.experttype.psychologist=Psychologist
+ls.hof.experttype.financial_director=Financial director
+ls.hof.experttype.youth_trainer=Youth trainer
+ls.hof.experttype.youth_scout=Youth scout
+ls.hof.experttype.tactical_assistant=Tactical assistant
+ls.hof.experttype.sports_director=Sports director
+ls.hof.experttype.goalkeepers_coach=Goalkeeper coach
+ls.hof.experttype.supporter_liaison_officer=Supporter liaison officer
+ls.hof.experttype.chief_financial_officer=Chief financial officer
+ls.hof.experttype.press_manager=Press manager
+ls.hof.experttype.head_coach=Head coach
+
+
+
