#2296 Debug build.gradle

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2489,7 +2489,7 @@ ls.hof.experttype.sales_director=Sales director
 ls.hof.experttype.referee=Referee
 ls.hof.experttype.television_show_host=Television show host
 ls.hof.experttype.agent=Agent
-ls.hof.experttype.actor=Actor,
+ls.hof.experttype.actor=Actor
 ls.hof.experttype.sports_journalist=Sports journalist
 ls.hof.experttype.head_equipment_manager=Head equipment manager
 ls.hof.experttype.secretary=Secretary
